# projection

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  projects.bkp.json  projects.json  readme.md  readme.org  result  shell.nix
.github/workflows/: CI.yml  test.yml
data/: 1caee4f5-0c28-485d-8bb7-b518b7efa414.json  4386cb27-2b1c-4044-a93e-850f6510d008.json  65e4bdd3-6e87-40fc-bf3c-903f93db2541.json
nix/: default.nix  rust.nix  sources.json
src/: cli.rs  data.rs  lib.rs  main.rs
src/snapshots/: projection__data__tests__convert_to_url.snap  projection__data__tests__parse_and_convert_to_url.snap  projection__data__tests__parse_from_json.snap  projection__data__tests__project_to_url.snap  projection__lib__tests__parse_and_convert_to_url.snap  projection__tests__add_project-2.snap  projection__tests__add_project-2.snap.new  projection__tests__add_project.snap  projection__tests__parse_from_json.snap
tests/: tests.rs
tests/testenv/: mod.rs
tests/testenv/snapshots/: tests__testenv__add_project.snap
