[package]
name = "projection"
version = "0.1.0"
authors = ["brettm12345 <brettmandler@gmail.com>"]
build = "./build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
clap = "2.33.0"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
ansi_term = "0.12.1"
enquirer = "0.3.0"
dialoguer = "0.5.0"
fp-core = "0.1.9"
jfs = "0.6.2"
git2 = "0.11.0"
parse = "0.1.2"
url = "2.1.1"
colored = "1.9.2"
assert_cmd = "0.12.0"
insta = "0.13.1"
pretty_assertions = "0.6.1"
tempfile = "3.1.0"

[dev-dependencies]
cargo-insta = "0.13.0"
